# coppewebite

./: README.md  apache-configuration.md  gemget.py  parse-feed.py  reparse-feed.py
gemini-from-http/: README.md  package-mod-md-certs  proxy.py
gemini-to-web/: README.md  pyproject.toml
gemini-to-web/example/: build.sh
gemini-to-web/example/source/2024/12/: old-post.gmi
gemini-to-web/example/source/2025/12/: new-post.gmi
gemini-to-web/src/gemini_to_web/: __init__.py  html.py  indexer.py  parser.py  rss.py
